--- a/Oblig2/red.ipynb
+++ b/Oblig2/red.ipynb
@@ -540,7 +540,7 @@
     "\n",
     "Det vil også være nødvendig å transformere 'quality' kolonnen til en kategorisk datatype slik av vi kan bruke SMOTENC til genereringen av de sytestiske datene.\n",
     "\n",
-    "I seksjonen nedenfor gjør jeg en enkel demonstrasjon av upsampling med SMOTENC, som vi ser av resultatet så lager SMOTENC da sytetiske verdier slik at hele datasettet blir balansert. Det er imidlertid ikke nødvendigvis lurt å lage så mange syntetsiske verdier som må dette tilfellet. I selv implementasjoen kommer jeg derfor til først å gjøre en downsampling slik at vi ikke må lage like mange syntetiskeverdier og at dette blir gjort i loopingen som jeg brygger opp for teste modelene, slik at oppdeling her blir en del av randomiseringen ved oppdeling av datasettet. "
+    "I seksjonen nedenfor gjør jeg en enkel demonstrasjon av upsampling med SMOTENC, som vi ser av resultatet så lager SMOTENC da sytetiske verdier slik at hele datasettet blir balansert. Det er imidlertid ikke nødvendigvis lurt å lage så mange syntetsiske verdier som vi må i dette tilfellet. En annen vurdering som kunnde vært gjort er og dropp radene med 8 og 3 for 'quality' kolonnen og balansere datasettet på denne måten."
    ]
   },
   {
@@ -930,6 +930,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e88283d8",
+   "metadata": {},
+   "source": [
+    "For testing av Kmeans modellen så kommer jeg til å splitte opp vurderingen i to hoveddeler med fokus på external vurdring for den ene del og internal for den andre delen. I utgangspunktet kommer jeg i hovedsak til å bruke antall clustere som tuning parameterm, selv om dette blir mest relevant for intervall vurderingen. Videre kommer jeg til å bruke valg muligher jeg har bygd inn i fuksjonene mine for å vurdere om bruk av forskjellige scalerings metoder og down og upsamling for å se om dette kan forbedre resultatet til kmeans modellen."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "712b4c8f",
@@ -942,14 +950,175 @@
       "Traning ressults:\n",
       "**********************************\n",
       "External:\n",
-      "Adjusted rand score: 0.00 +- 0.00\n",
+      "Adjusted rand score: -0.00 +- 0.00\n",
       "Homogeneity score: 0.05 +- 0.00\n",
       "Completness score: 0.04 +- 0.00\n",
       "V-measure score: 0.04 +- 0.00\n",
+      "\n",
+      "Validation results:\n",
       "**********************************\n",
-      "Internal:\n",
-      "Silhouette score: 0.41 +- 0.02\n",
-      "Davies score: 0.78 +- 0.08\n",
+      "External:\n",
+      "Adjusted rand score: -0.00 +- 0.01\n",
+      "Homogeneity score: 0.06 +- 0.01\n",
+      "Completness score: 0.05 +- 0.00\n",
+      "V-measure score: 0.05 +- 0.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "kmans = KMeans(n_clusters=6)\n",
+    "validate_kmeans(kmans, runs=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "2c9fb4c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traning ressults:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: -0.00 +- 0.00\n",
+      "Homogeneity score: 0.05 +- 0.01\n",
+      "Completness score: 0.04 +- 0.01\n",
+      "V-measure score: 0.04 +- 0.01\n",
+      "\n",
+      "Validation results:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: -0.00 +- 0.01\n",
+      "Homogeneity score: 0.07 +- 0.02\n",
+      "Completness score: 0.05 +- 0.01\n",
+      "V-measure score: 0.06 +- 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "kmans = KMeans(n_clusters=6)\n",
+    "validate_kmeans(kmans, runs=5, min_max=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "c5915894",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traning ressults:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: -0.00 +- 0.00\n",
+      "Homogeneity score: 0.05 +- 0.00\n",
+      "Completness score: 0.04 +- 0.00\n",
+      "V-measure score: 0.04 +- 0.00\n",
+      "\n",
+      "Validation results:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: -0.01 +- 0.00\n",
+      "Homogeneity score: 0.07 +- 0.01\n",
+      "Completness score: 0.05 +- 0.01\n",
+      "V-measure score: 0.06 +- 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "kmans = KMeans(n_clusters=6)\n",
+    "validate_kmeans(kmans, runs=5, mean=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "0f50b801",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traning ressults:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: 0.00 +- 0.00\n",
+      "Homogeneity score: 0.05 +- 0.01\n",
+      "Completness score: 0.04 +- 0.01\n",
+      "V-measure score: 0.04 +- 0.01\n",
+      "\n",
+      "Validation results:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: -0.00 +- 0.01\n",
+      "Homogeneity score: 0.06 +- 0.01\n",
+      "Completness score: 0.04 +- 0.01\n",
+      "V-measure score: 0.05 +- 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "kmans = KMeans(n_clusters=6)\n",
+    "validate_kmeans(kmans, runs=5, down_s=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "25c77ccb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traning ressults:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: -0.00 +- 0.00\n",
+      "Homogeneity score: 0.05 +- 0.01\n",
+      "Completness score: 0.04 +- 0.01\n",
+      "V-measure score: 0.05 +- 0.01\n",
+      "\n",
+      "Validation results:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: -0.01 +- 0.00\n",
+      "Homogeneity score: 0.06 +- 0.02\n",
+      "Completness score: 0.05 +- 0.01\n",
+      "V-measure score: 0.05 +- 0.02\n"
+     ]
+    }
+   ],
+   "source": [
+    "kmans = KMeans(n_clusters=6)\n",
+    "validate_kmeans(kmans, runs=5, up_s=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aef0c5c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traning ressults:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: 0.00 +- 0.00\n",
+      "Homogeneity score: 0.06 +- 0.01\n",
+      "Completness score: 0.04 +- 0.01\n",
+      "V-measure score: 0.05 +- 0.01\n",
       "\n",
       "Validation results:\n",
       "**********************************\n",
@@ -957,30 +1126,293 @@
       "Adjusted rand score: -0.00 +- 0.01\n",
       "Homogeneity score: 0.06 +- 0.01\n",
       "Completness score: 0.05 +- 0.01\n",
-      "V-measure score: 0.05 +- 0.01\n",
-      "**********************************\n",
-      "Internal:\n",
-      "Silhouette score: 0.41 +- 0.03\n",
-      "Davies score: 0.81 +- 0.05\n",
-      "\n",
-      "Test results:\n",
-      "**********************************\n",
-      "External:\n",
-      "Adjusted rand score: -0.00 +- 0.01\n",
-      "Homogeneity score: 0.07 +- 0.02\n",
-      "Completness score: 0.05 +- 0.01\n",
-      "V-measure score: 0.06 +- 0.01\n",
-      "**********************************\n",
-      "Internal:\n",
-      "Silhouette score: 0.40 +- 0.03\n",
-      "Davies score: 0.82 +- 0.06\n"
+      "V-measure score: 0.05 +- 0.01\n"
      ]
     }
    ],
    "source": [
     "kmans = KMeans(n_clusters=6)\n",
-    "validate_kmeans(kmans, test=True, runs=10)"
+    "validate_kmeans(kmans, runs=5, down_s=50 ,up_s=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b2e9c79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traning ressults:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: -0.00 +- 0.00\n",
+      "Homogeneity score: 0.05 +- 0.01\n",
+      "Completness score: 0.04 +- 0.01\n",
+      "V-measure score: 0.04 +- 0.01\n",
+      "\n",
+      "Validation results:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: 0.00 +- 0.01\n",
+      "Homogeneity score: 0.07 +- 0.01\n",
+      "Completness score: 0.05 +- 0.01\n",
+      "V-measure score: 0.06 +- 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "kmans = KMeans(n_clusters=6)\n",
+    "validate_kmeans(kmans, runs=5, down_s=50 ,up_s=True, min_max=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "0821d299",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traning ressults:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: -0.00 +- 0.00\n",
+      "Homogeneity score: 0.05 +- 0.00\n",
+      "Completness score: 0.04 +- 0.00\n",
+      "V-measure score: 0.05 +- 0.00\n",
+      "\n",
+      "Validation results:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: -0.00 +- 0.01\n",
+      "Homogeneity score: 0.06 +- 0.01\n",
+      "Completness score: 0.05 +- 0.01\n",
+      "V-measure score: 0.05 +- 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "kmans = KMeans(n_clusters=6)\n",
+    "validate_kmeans(kmans, runs=5, down_s=50 ,up_s=True, mean=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "b52c1ef6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traning ressults:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: -0.00 +- 0.00\n",
+      "Homogeneity score: 0.05 +- 0.00\n",
+      "Completness score: 0.04 +- 0.01\n",
+      "V-measure score: 0.04 +- 0.01\n",
+      "\n",
+      "Validation results:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: -0.00 +- 0.00\n",
+      "Homogeneity score: 0.06 +- 0.00\n",
+      "Completness score: 0.04 +- 0.01\n",
+      "V-measure score: 0.05 +- 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "kmans = KMeans(n_clusters=6)\n",
+    "validate_kmeans(kmans, runs=5, down_s=200 ,up_s=True, mean=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "abbaf864",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traning ressults:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: -0.00 +- 0.00\n",
+      "Homogeneity score: 0.05 +- 0.00\n",
+      "Completness score: 0.04 +- 0.00\n",
+      "V-measure score: 0.04 +- 0.00\n",
+      "\n",
+      "Validation results:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: -0.01 +- 0.01\n",
+      "Homogeneity score: 0.07 +- 0.01\n",
+      "Completness score: 0.06 +- 0.01\n",
+      "V-measure score: 0.06 +- 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "kmans = KMeans(n_clusters=6)\n",
+    "validate_kmeans(kmans, runs=5, down_s=250 ,up_s=True, mean=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "504c5078",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traning ressults:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: -0.01 +- 0.00\n",
+      "Homogeneity score: 0.04 +- 0.00\n",
+      "Completness score: 0.04 +- 0.00\n",
+      "V-measure score: 0.04 +- 0.00\n",
+      "\n",
+      "Validation results:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: 0.00 +- 0.01\n",
+      "Homogeneity score: 0.06 +- 0.01\n",
+      "Completness score: 0.05 +- 0.01\n",
+      "V-measure score: 0.06 +- 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "kmans = KMeans(n_clusters=5)\n",
+    "validate_kmeans(kmans, runs=5, down_s=250 ,up_s=True, mean=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "ec1ad29a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traning ressults:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: -0.00 +- 0.00\n",
+      "Homogeneity score: 0.05 +- 0.01\n",
+      "Completness score: 0.04 +- 0.00\n",
+      "V-measure score: 0.04 +- 0.01\n",
+      "\n",
+      "Validation results:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: -0.00 +- 0.01\n",
+      "Homogeneity score: 0.07 +- 0.02\n",
+      "Completness score: 0.05 +- 0.01\n",
+      "V-measure score: 0.06 +- 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "kmans = KMeans(n_clusters=7)\n",
+    "validate_kmeans(kmans, runs=5, down_s=250 ,up_s=True, mean=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "d3c3d9f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traning ressults:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: -0.00 +- 0.00\n",
+      "Homogeneity score: 0.05 +- 0.01\n",
+      "Completness score: 0.04 +- 0.01\n",
+      "V-measure score: 0.04 +- 0.01\n",
+      "\n",
+      "Validation results:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: -0.00 +- 0.01\n",
+      "Homogeneity score: 0.06 +- 0.01\n",
+      "Completness score: 0.05 +- 0.01\n",
+      "V-measure score: 0.06 +- 0.01\n",
+      "\n",
+      "Test results:\n",
+      "**********************************\n",
+      "External:\n",
+      "Adjusted rand score: -0.00 +- 0.01\n",
+      "Homogeneity score: 0.07 +- 0.01\n",
+      "Completness score: 0.06 +- 0.01\n",
+      "V-measure score: 0.06 +- 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "kmans = KMeans(n_clusters=6)\n",
+    "validate_kmeans(kmans, test=True, runs=20, mean=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4853d87a",
+   "metadata": {},
+   "source": [
+    "Som vi ser av resultatene over for testing av K-means modellen over så er det vansklig å få denne modellen til prestere bra i forhold til external vurdering, det eneste som kan se til å gi en veldig lite forbedring av scalering av feature verdiene."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33f62c08",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65bf4333",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a77d5756",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8ed3c15",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
