oppdatering av mappe og filer

--- a/Oblig3/student_performance.ipynb
+++ b/Oblig3/student_performance.ipynb
@@ -17,16 +17,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:1: SyntaxWarning: invalid escape sequence '\\O'\n",
-      "<>:1: SyntaxWarning: invalid escape sequence '\\O'\n",
-      "C:\\Users\\hallo\\AppData\\Local\\Temp\\ipykernel_14136\\2639928159.py:1: SyntaxWarning: invalid escape sequence '\\O'\n",
-      "  data = pd.read_csv(\"..\\Oblig3\\student_performance.csv\", delimiter=\";\")\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -269,7 +259,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv(\"..\\Oblig3\\student_performance.csv\", delimiter=\";\")\n",
+    "data = pd.read_csv(r\"..\\oblig3\\student_performance.csv\", delimiter=\";\")\n",
     "\n",
     "data.head()"
    ]
@@ -299,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
