--- a/Oblig3/student_performance.ipynb
+++ b/Oblig3/student_performance.ipynb
@@ -267,8 +267,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "4484e7e2",
+   "execution_count": 7,
+   "id": "5755fef4",
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
        "[8 rows x 36 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +638,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "id": "4484e7e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4424 entries, 0 to 4423\n",
+      "Data columns (total 37 columns):\n",
+      " #   Column                                          Non-Null Count  Dtype  \n",
+      "---  ------                                          --------------  -----  \n",
+      " 0   Marital status                                  4424 non-null   int64  \n",
+      " 1   Application mode                                4424 non-null   int64  \n",
+      " 2   Application order                               4424 non-null   int64  \n",
+      " 3   Course                                          4424 non-null   int64  \n",
+      " 4   Daytime/evening attendance\t                     4424 non-null   int64  \n",
+      " 5   Previous qualification                          4424 non-null   int64  \n",
+      " 6   Previous qualification (grade)                  4424 non-null   float64\n",
+      " 7   Nacionality                                     4424 non-null   int64  \n",
+      " 8   Mother's qualification                          4424 non-null   int64  \n",
+      " 9   Father's qualification                          4424 non-null   int64  \n",
+      " 10  Mother's occupation                             4424 non-null   int64  \n",
+      " 11  Father's occupation                             4424 non-null   int64  \n",
+      " 12  Admission grade                                 4424 non-null   float64\n",
+      " 13  Displaced                                       4424 non-null   int64  \n",
+      " 14  Educational special needs                       4424 non-null   int64  \n",
+      " 15  Debtor                                          4424 non-null   int64  \n",
+      " 16  Tuition fees up to date                         4424 non-null   int64  \n",
+      " 17  Gender                                          4424 non-null   int64  \n",
+      " 18  Scholarship holder                              4424 non-null   int64  \n",
+      " 19  Age at enrollment                               4424 non-null   int64  \n",
+      " 20  International                                   4424 non-null   int64  \n",
+      " 21  Curricular units 1st sem (credited)             4424 non-null   int64  \n",
+      " 22  Curricular units 1st sem (enrolled)             4424 non-null   int64  \n",
+      " 23  Curricular units 1st sem (evaluations)          4424 non-null   int64  \n",
+      " 24  Curricular units 1st sem (approved)             4424 non-null   int64  \n",
+      " 25  Curricular units 1st sem (grade)                4424 non-null   float64\n",
+      " 26  Curricular units 1st sem (without evaluations)  4424 non-null   int64  \n",
+      " 27  Curricular units 2nd sem (credited)             4424 non-null   int64  \n",
+      " 28  Curricular units 2nd sem (enrolled)             4424 non-null   int64  \n",
+      " 29  Curricular units 2nd sem (evaluations)          4424 non-null   int64  \n",
+      " 30  Curricular units 2nd sem (approved)             4424 non-null   int64  \n",
+      " 31  Curricular units 2nd sem (grade)                4424 non-null   float64\n",
+      " 32  Curricular units 2nd sem (without evaluations)  4424 non-null   int64  \n",
+      " 33  Unemployment rate                               4424 non-null   float64\n",
+      " 34  Inflation rate                                  4424 non-null   float64\n",
+      " 35  GDP                                             4424 non-null   float64\n",
+      " 36  Target                                          4424 non-null   object \n",
+      "dtypes: float64(7), int64(29), object(1)\n",
+      "memory usage: 1.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "bcdc2b9a",
    "metadata": {},
    "outputs": [
@@ -685,7 +746,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +757,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "bb4812d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "ca0594c5",
    "metadata": {},
    "outputs": [
@@ -726,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "7a610a83",
    "metadata": {},
    "outputs": [
