--- a/Oblig3/student_performance.ipynb
+++ b/Oblig3/student_performance.ipynb
@@ -792,7 +792,9 @@
    "id": "4f79fcaa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#### test ut downsampling...."
+   ]
   },
   {
    "cell_type": "code",
