--- a/Oblig3/abalone_age.ipynb
+++ b/Oblig3/abalone_age.ipynb
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 133,
    "id": "21e5b84d",
    "metadata": {},
    "outputs": [
@@ -909,7 +909,7 @@
        "                       random_state=15)]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 134,
    "id": "b89de93f",
    "metadata": {},
    "outputs": [
@@ -1227,7 +1227,7 @@
     "    'alpha': [0.00001, 0.0001, 0.001, 0.01, 0.1, 1, 10],\n",
     "    'solver': ['svd', 'cholesky', 'lsqr', 'sparse_cg', 'sag', 'saga'],\n",
     "    'max_iter': [1000, 5000, 10000],\n",
-    "    'fit_intercept': [True, False],\n",
+    "    'fit_intercept': [True]\n",
     "}\n",
     "ridge_estimators, ridge_scores_train, ridge_scores_test, ridge_cv_results = train(df_features, df_targets,\n",
     "    Ridge(random_state=global_random_state),\n",
