--- a/Oblig3/abalone_age.ipynb
+++ b/Oblig3/abalone_age.ipynb
@@ -589,7 +589,7 @@
    "metadata": {},
    "source": [
     "#### Korrelasjon\n",
-    "- Som vi ser av korrelasjons plotet er det betydelig korrelasjon mellom flere av feature kolonene, det vil derfor være hensikts messig å bruke PCA til å undersøken om det kan gi bedre prestasjon for modellene vi skal bruke ved samle noen eller flere av featureene til færre kolonner."
+    "- Som vi ser av korrelasjons plotet er det betydelig korrelasjon mellom flere av feature kolonene, det vil derfor være hensikts messig å bruke PCA til å undersøken om det kan gi bedre prestasjon for modellene vi skal bruke ved samle noen eller flere av feature kolonnene."
    ]
   },
   {
@@ -696,7 +696,7 @@
    "metadata": {},
    "source": [
     "#### PCA testing\n",
-    "- For å test ut som PCA kan gi bedre resultater for treningen av datasettet så har jeg bruket PCA til å samle datasette featurene, jeg valgt å test dette over en range (3-7, samt uendrett) for å se om dette gir noen positiv effekt på prestasjonen til modellene for dette datasettet.\n",
+    "- For å test ut som PCA kan gi bedre resultater for treningen av datasettet så har jeg bruket PCA til å samle featurene i datasettet. Jeg valgt å test dette over en range (3-7, samt uendrett) for å se om dette gir noen positiv effekt på prestasjonen til modellene for dette datasettet.\n",
     "\n",
     "- Jeg har brukt cross_val_score til å gjennomføre en enkel pre og post test for prestasjonen til modellene før og etter bruk av PCA.\n",
     "\n",
@@ -757,6 +757,19 @@
     "        print(\"*\")\n",
     "\n",
     "    return estimators, pd.DataFrame(scores_train), pd.DataFrame(scores_test), pd.concat(cv_results, names=['test_split'], keys=range(outer_splits))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31d4d3b3",
+   "metadata": {},
+   "source": [
+    "#### Beskrivelser av metoder for testing av datasettet\n",
+    "- For å test og tune modellene har jeg laget en custom nested CV funksjon som bruke GridSearchCV i scikit som den indre delen testningen.\n",
+    "- Ut av denne fuksjonen så får vi retunert den beste modellen for hver runde av den yttere delen av fuksjonen, de tilhørende resultatene ut i evaluate fuksjonen for både train og test oppsplitingen, og resultatene fra selve gridsearch modellen.\n",
+    "- Som grunnleggende utgangspunkt kommer jeg til å bruke en oppsplitting på 5 deler for den yttere delen av nested cv fuksjonen og 4 deler for den indre delen av fuksjonen. Jeg har også lagt inn fuksjonalitet for å endre denne oppsplittingen, noe som er veldig nytt for å kunne redusere kjøretiden til fuksjonen ved utprøving av forskjellige tuning parameter før den endelige kjøringen.\n",
+    "- Videre har jeg valgt å bruke  RandomForestRegressor, RidgeRegressor og LassoRegessor for å lage modeller til datasettet.\n",
+    "- For å vurdere disse modellene har jeg valgt å bruke disse metricene \"mean absolutte error\", \"mean squared error\" og \"r2\"."
    ]
   },
   {
@@ -1135,7 +1148,15 @@
    "id": "1ee34960",
    "metadata": {},
    "source": [
-    "#### RandomForestRegressor"
+    "#### RandomForestRegressor\n",
+    "\n",
+    "- For å tune den avsluttende modellen så valgte jeg å bruke disse parameterne, max_depth, min_samples_leaf og n_estimatiors. Da jeg kom fram til at disse ga best uttelling. Utover parameterne og verdiene som er testet i den avsluttende modellen har jeg også prøve flere andre kombinasjoner uten at dette har gitt noen bedre resultater og pga. eksponential kjøretid har ikke tatt med disse i den avsluttende modellen.\n",
+    "- Max_depth definere hvor dype de forskjellige trene i modellen kan være, generelt vil dette gjøre det at jo dypere treet er jo bedre kan disse tilpasse seg datasettet, men dette øker også risikoen for overfiting da du ofte kan få treer som tilpasser seg edge caser hvis du ikke implementere andre parameter for å unngå dette.\n",
+    "- min_samples_leaf er en parameter som brukes for å redusere overfiting på de forskjellige trene, ved å sette en begrensing på minimums verdien en enkelt node i treet må innehold. Dvs. desto mindre denne verdien er desto mer risiko for overfiting vil du få, samt at modellen lettere tilpasser seg edge caser. Du også velge å erstatte denne parameteren med min_samples_split, da disse ofte gir generelt tilsvarende resultater. min_samples_split begrenser hvor mange verdier en node må ha for å kunne splittes opp i flere node. Hoved forskjellen mellom disse parameterne er at min_samples_split vil være endre mer begrensede i forhold til veldig små edge caser ved bruk av høyere verdier for denne parameteren.\n",
+    "- n_estimator er en parameter som definere hvor mange individuelle treer modellen kan inneholde. Dvs. desto høyere denne verdien er jo bedre kan modellen tilpasse seg et datasett, men dette øker også risikoen for overfiting samt kjøretiden til modellen.\n",
+    "- For resultatene for denne algoritmen så er det modeller med max_dept = 8 og 12, min_samples_leaf= 8 og 12, og n_estimatiors på 500 som gir best resultat.\n",
+    "Hvis vi analysere disse i kontekst av plotene for tuning parameterne så er at det sannsynligvis ikke noen store forskjellig i prestasjon mellom disse parameterne.\n",
+    "- Når vi ser på resultatene for denne algoritmen så ser vi at det er en betydelig forskjell mellom test og training delen av datasettet noe som tyder på at modellen har en tendens til å overfite under trening. Videre ser vi at test resultatene gir oss en r2 korrelasjon på 0.56 som tyder på at modellen gir oss en moderat korrelasjon til å predikere target verdiene. Gjennomsnittet av Mean_absolute_error ligger på 1.50 og ut i fra en total range på ca. 25 tyder dette på ganske lave feil-verdier for disse prediksjonene. Gjennomsnittet for mean_squared_error på 4.59 tyder også på at det heller ikke er mange store uteliggere i prediksjonene til modellene. Helhetlig tyder dette på at algoritmene klarer å levere en modell med relativt lav feil margin, men at selv korrelasjonen til modellene ikke er høy nok til å gi sterke prediksjoner.  "
    ]
   },
   {
